# thesis

./: .gitignore  .gitmodules  .nodes.homelab  .nodes.redhat  Dockerfile  README.md  justfile  pyproject.toml
.github/workflows/: main.yml
analyzer/: .gitignore  Cargo.toml  Dockerfile  README.md  record.pcap
analyzer/postprocessing/: .gitignore  eviction_timeout.py  openflow.py  packet_flood.py  packet_flood_basic.py  packet_flood_latency.py  packet_fuzzing.py  parsing.py  randomized_eviction_timeout.py  window.py
analyzer/results/: .gitignore  packet_fuzzing.md  randomized_eviction_timeout.md  randomized_eviction_timeout_2023-01-01.csv
analyzer/src/: main.rs
analyzer/src/experiments/: blast.rs  eviction_timeout.rs  install_dependencies.rs  install_dependencies.sh  log_flow_ops.py  log_flow_ops.rs  log_ovs_dpctl_stats.rs  mod.rs  monitor.rs  node_logger.rs  node_logger_offcputime.sh  node_logger_perf.sh  node_logger_usdt.sh  packet_flood.rs  packet_fuzzing.py  packet_fuzzing.rs  pkt_reflector.rs  randomized_eviction_timeout.rs  reload_ovn.rs  reload_ovn.sh  rule_limit.rs  victim.rs
analyzer/src/utils/: blast.rs  collector.rs  external_prog.rs  latency.rs  loadavg.rs  mod.rs  ovs.rs  raw_socket.rs  results_uploader.rs  rr.rs  scapy.rs  tcpdump.rs  vswitchd_monitor.rs
cluster_tools/: README.md  pyproject.toml
cluster_tools/install-scripts/: Dockerfile.fedora.dev  calico-master.sh  fedora36-general-init.sh  ovn-kubernetes-master.sh
cluster_tools/kube_configs/: arch.yaml  arch2.yaml  netserver.yaml  reflector.yaml  victim.yaml
cluster_tools/src/: __init__.py
install-scripts/: fedora36-general-init.sh  ovn-kubernetes-master.sh
latency_analyzer/: Cargo.toml  README.md  data.ods
latency_analyzer/src/: main.rs
text/: Makefile  abstract-cz.xmpdata  abstract-en.xmpdata  analyzer.tex  ch1.tex  ch2.tex  ch3.tex  ch4.tex  ch5.tex  ch6.tex  conclusion.tex  intro.tex  macros.tex  metadata.tex  os.tex  ovs-mods.tex  refs.bib  thesis.tex  thesis.xmpdata  title.tex
text/attachment/: Dockerfile.ovs-node  README.md  build_ovs_container.sh  kube_configs  ovs-usdt-probes.patch  setup1-general.sh  setup2-master.sh
text/attachment/analyzer/: Cargo.toml  Dockerfile  README.md  postprocessing  src
text/img/: justfile
thesis/: __init__.py  setup.py
