[tool.poetry]
name = "thesis"
version = "0.1.0"
description = ""
authors = ["Vasek Sraier <git@vakabus.cz>"]
readme = "README.md"
packages = [{include = "thesis"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
proxmoxer = "^1.3.1"
openssh-wrapper = "^0.4"
paramiko = "^2.11.0"
typing-extensions = "^4.4.0"
poethepoet = "^0.16.4"
black = "^22.10.0"
isort = "^5.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



[tool.poe.tasks]
run = { script = "thesis:cli", help = "run the CLI" }
format = { shell = "black thesis; isort .", help = "Run code formatter" }


[tool.black]
line-length = 120
target_version = ['py310']
include = '\.py$'


[tool.isort]
line_length=120                # corresponds to -w  flag
multi_line_output=3            # corresponds to -m  flag
include_trailing_comma=true    # corresponds to -tc flag
skip_glob = '^((?!py$).)*$'    # isort all Python files
float_to_top=true
profile = "black"